--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,22 +1,26 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:fitsSystemWindows="true"
-tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
-    >
+tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
 
-<TextView
-    android:layout_width="135dp"
-    android:layout_height="wrap_content"
-    android:text="Vardagsrum"
-    android:id="@+id/text1"
-    />
 
-<Button
+    <TextView
+        android:layout_width="135dp"
+        android:layout_height="wrap_content"
+        android:text="Vardagsrum"
+        android:id="@+id/text1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:padding="15dp"
+        android:layout_alignBaseline="@+id/btn1on"
+        android:layout_alignBottom="@+id/btn1on"
+        android:layout_alignParentStart="true" />
+
+    <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="1 On"
@@ -24,7 +28,7 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:enabled="true"
     android:onClick="btnClick"
     android:layout_toEndOf="@id/text1"
-    />
+        android:background="@android:drawable/button_onoff_indicator_on" />
 
 <Button
     android:layout_width="wrap_content"
@@ -34,7 +38,7 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:enabled="true"
     android:onClick="btnClick"
     android:layout_toEndOf="@id/btn1on"
-    />
+    android:background="@android:drawable/button_onoff_indicator_off" />
 
 <TextView
     android:layout_width="135dp"
@@ -42,7 +46,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:text="Vardagsrum"
     android:id="@+id/text2"
     android:layout_below="@id/btn1on"
-    />
+    android:padding="15dp"
+    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -52,7 +57,7 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:onClick="btnClick"
     android:layout_toEndOf="@id/text2"
     android:layout_below="@id/btn1on"
-    />
+    android:background="@android:drawable/button_onoff_indicator_on" />
 
 <Button
     android:layout_width="wrap_content"
@@ -64,7 +69,7 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:layout_toEndOf="@id/btn2on"
     android:layout_below="@id/btn1on"
 
-    />
+    android:background="@android:drawable/button_onoff_indicator_off" />
 
 <TextView
     android:layout_width="135dp"
@@ -73,7 +78,9 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:id="@+id/text3"
     android:layout_below="@id/btn2on"
 
-    />
+    android:padding="15dp"
+    android:elegantTextHeight="false"
+    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -84,7 +91,7 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:layout_toEndOf="@id/text3"
     android:layout_below="@id/btn2on"
 
-    />
+    android:background="@android:drawable/button_onoff_indicator_on" />
 
 <Button
     android:layout_width="wrap_content"
@@ -96,7 +103,7 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:layout_toEndOf="@id/btn3on"
     android:layout_below="@id/btn2on"
 
-    />
+    android:background="@android:drawable/button_onoff_indicator_off" />
 
 <TextView
     android:layout_width="135dp"
@@ -105,7 +112,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:id="@+id/text4"
     android:layout_below="@id/btn3on"
 
-    />
+    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+    android:padding="15dp" />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -116,7 +124,7 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:layout_toEndOf="@id/text4"
     android:layout_below="@id/btn3on"
 
-    />
+    android:background="@android:drawable/button_onoff_indicator_on" />
 
 <Button
     android:layout_width="wrap_content"
@@ -128,7 +136,7 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:layout_toEndOf="@id/btn4on"
     android:layout_below="@id/btn3on"
 
-    />
+    android:background="@android:drawable/button_onoff_indicator_off" />
 <TextView
     android:layout_width="135dp"
     android:layout_height="wrap_content"
@@ -136,7 +144,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:id="@+id/text5"
     android:layout_below="@id/btn4on"
 
-    />
+    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+    android:padding="15dp" />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -147,7 +156,7 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:layout_toEndOf="@id/text5"
     android:layout_below="@id/btn4on"
 
-    />
+    android:background="@android:drawable/button_onoff_indicator_on" />
 
 <Button
     android:layout_width="wrap_content"
@@ -159,5 +168,6 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:layout_toEndOf="@id/btn5on"
     android:layout_below="@id/btn4on"
 
-    />
+    android:background="@android:drawable/button_onoff_indicator_off" />
+
 </RelativeLayout>
