--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,7 +6,9 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:fitsSystemWindows="true"
-tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
+tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
+    android:padding="8dp"
+    android:background="#BA68C8">
 
 
     <TextView
@@ -28,7 +30,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
     android:enabled="true"
     android:onClick="btnClick"
     android:layout_toEndOf="@id/text1"
-        android:background="@android:drawable/button_onoff_indicator_on" />
+        android:background="@android:drawable/button_onoff_indicator_on"
+        android:layout_margin="5dp" />
 
 <Button
     android:layout_width="wrap_content"
@@ -38,7 +41,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
     android:enabled="true"
     android:onClick="btnClick"
     android:layout_toEndOf="@id/btn1on"
-    android:background="@android:drawable/button_onoff_indicator_off" />
+    android:background="@android:drawable/button_onoff_indicator_off"
+    android:layout_margin="5dp" />
 
 <TextView
     android:layout_width="135dp"
@@ -57,7 +61,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
     android:onClick="btnClick"
     android:layout_toEndOf="@id/text2"
     android:layout_below="@id/btn1on"
-    android:background="@android:drawable/button_onoff_indicator_on" />
+    android:background="@android:drawable/button_onoff_indicator_on"
+    android:layout_margin="5dp" />
 
 <Button
     android:layout_width="wrap_content"
@@ -69,7 +74,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
     android:layout_toEndOf="@id/btn2on"
     android:layout_below="@id/btn1on"
 
-    android:background="@android:drawable/button_onoff_indicator_off" />
+    android:background="@android:drawable/button_onoff_indicator_off"
+    android:layout_margin="5dp" />
 
 <TextView
     android:layout_width="135dp"
@@ -91,7 +97,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
     android:layout_toEndOf="@id/text3"
     android:layout_below="@id/btn2on"
 
-    android:background="@android:drawable/button_onoff_indicator_on" />
+    android:background="@android:drawable/button_onoff_indicator_on"
+    android:layout_margin="5dp" />
 
 <Button
     android:layout_width="wrap_content"
@@ -103,7 +110,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
     android:layout_toEndOf="@id/btn3on"
     android:layout_below="@id/btn2on"
 
-    android:background="@android:drawable/button_onoff_indicator_off" />
+    android:background="@android:drawable/button_onoff_indicator_off"
+    android:layout_margin="5dp" />
 
 <TextView
     android:layout_width="135dp"
@@ -124,7 +132,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
     android:layout_toEndOf="@id/text4"
     android:layout_below="@id/btn3on"
 
-    android:background="@android:drawable/button_onoff_indicator_on" />
+    android:background="@android:drawable/button_onoff_indicator_on"
+    android:layout_margin="5dp" />
 
 <Button
     android:layout_width="wrap_content"
@@ -136,7 +145,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
     android:layout_toEndOf="@id/btn4on"
     android:layout_below="@id/btn3on"
 
-    android:background="@android:drawable/button_onoff_indicator_off" />
+    android:background="@android:drawable/button_onoff_indicator_off"
+    android:layout_margin="5dp" />
 <TextView
     android:layout_width="135dp"
     android:layout_height="wrap_content"
@@ -156,7 +166,8 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
     android:layout_toEndOf="@id/text5"
     android:layout_below="@id/btn4on"
 
-    android:background="@android:drawable/button_onoff_indicator_on" />
+    android:background="@android:drawable/button_onoff_indicator_on"
+    android:layout_margin="5dp" />
 
 <Button
     android:layout_width="wrap_content"
@@ -168,6 +179,7 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity">
     android:layout_toEndOf="@id/btn5on"
     android:layout_below="@id/btn4on"
 
-    android:background="@android:drawable/button_onoff_indicator_off" />
+    android:background="@android:drawable/button_onoff_indicator_off"
+    android:layout_margin="5dp" />
 
 </RelativeLayout>
