--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,7 +8,7 @@ android:layout_height="match_parent"
 android:fitsSystemWindows="true"
 tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:padding="8dp"
-    android:background="#BA68C8">
+    android:background="@android:color/holo_blue_light">
 
 
     <TextView
@@ -20,7 +20,10 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
         android:padding="15dp"
         android:layout_alignBaseline="@+id/btn1on"
         android:layout_alignBottom="@+id/btn1on"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="@color/colorPrimaryDark"
+        android:textAlignment="center"
+        android:textSize="18sp" />
 
     <Button
     android:layout_width="wrap_content"
@@ -51,7 +54,10 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:id="@+id/text2"
     android:layout_below="@id/btn1on"
     android:padding="15dp"
-    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+    android:textColor="@color/colorPrimaryDark"
+    android:textAlignment="center"
+    android:textSize="18sp" />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -86,7 +92,10 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
 
     android:padding="15dp"
     android:elegantTextHeight="false"
-    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+    android:textColor="@color/colorPrimaryDark"
+    android:textAlignment="center"
+    android:textSize="18sp" />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -121,7 +130,10 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:layout_below="@id/btn3on"
 
     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-    android:padding="15dp" />
+    android:padding="15dp"
+    android:textColor="@color/colorPrimaryDark"
+    android:textAlignment="center"
+    android:textSize="18sp" />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -155,7 +167,11 @@ tools:context="nu.paheco.patrik.mqttcodesend.MainActivity"
     android:layout_below="@id/btn4on"
 
     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-    android:padding="15dp" />
+    android:padding="15dp"
+    android:textColor="@color/colorPrimaryDark"
+    android:elegantTextHeight="false"
+    android:textAlignment="center"
+    android:textSize="18sp" />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
