--- a/res/layout/cscodes.xml
+++ b/res/layout/cscodes.xml
@@ -11,6 +11,7 @@
             android:text="cscodes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/cscodes_text" />
+            android:id="@+id/cscodes_text"
+            android:textIsSelectable="true" />
     </ScrollView>
 </LinearLayout>
